[package]
name = "ahc018"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
ahc018-a = { alias = "a", problem = "https://atcoder.jp/contests/ahc018/tasks/ahc018_a" }

[[bin]]
name = "ahc018-a"
path = "src/bin/a.rs"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
competitive-library = { path = "../competitive-library" }
itertools = "=0.9.0"
itertools-num = "=0.1.3"
[dev-dependencies]
