[package]
name = "dp"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "dp-a", problem = { platform = "atcoder", contest = "dp", index = "A", url = "https://atcoder.jp/contests/dp/tasks/dp_a" } }
b = { name = "dp-b", problem = { platform = "atcoder", contest = "dp", index = "B", url = "https://atcoder.jp/contests/dp/tasks/dp_b" } }
c = { name = "dp-c", problem = { platform = "atcoder", contest = "dp", index = "C", url = "https://atcoder.jp/contests/dp/tasks/dp_c" } }
d = { name = "dp-d", problem = { platform = "atcoder", contest = "dp", index = "D", url = "https://atcoder.jp/contests/dp/tasks/dp_d" } }
e = { name = "dp-e", problem = { platform = "atcoder", contest = "dp", index = "E", url = "https://atcoder.jp/contests/dp/tasks/dp_e" } }
f = { name = "dp-f", problem = { platform = "atcoder", contest = "dp", index = "F", url = "https://atcoder.jp/contests/dp/tasks/dp_f" } }
g = { name = "dp-g", problem = { platform = "atcoder", contest = "dp", index = "G", url = "https://atcoder.jp/contests/dp/tasks/dp_g" } }
h = { name = "dp-h", problem = { platform = "atcoder", contest = "dp", index = "H", url = "https://atcoder.jp/contests/dp/tasks/dp_h" } }
i = { name = "dp-i", problem = { platform = "atcoder", contest = "dp", index = "I", url = "https://atcoder.jp/contests/dp/tasks/dp_i" } }
j = { name = "dp-j", problem = { platform = "atcoder", contest = "dp", index = "J", url = "https://atcoder.jp/contests/dp/tasks/dp_j" } }
k = { name = "dp-k", problem = { platform = "atcoder", contest = "dp", index = "K", url = "https://atcoder.jp/contests/dp/tasks/dp_k" } }
l = { name = "dp-l", problem = { platform = "atcoder", contest = "dp", index = "L", url = "https://atcoder.jp/contests/dp/tasks/dp_l" } }
m = { name = "dp-m", problem = { platform = "atcoder", contest = "dp", index = "M", url = "https://atcoder.jp/contests/dp/tasks/dp_m" } }
n = { name = "dp-n", problem = { platform = "atcoder", contest = "dp", index = "N", url = "https://atcoder.jp/contests/dp/tasks/dp_n" } }
o = { name = "dp-o", problem = { platform = "atcoder", contest = "dp", index = "O", url = "https://atcoder.jp/contests/dp/tasks/dp_o" } }
p = { name = "dp-p", problem = { platform = "atcoder", contest = "dp", index = "P", url = "https://atcoder.jp/contests/dp/tasks/dp_p" } }
q = { name = "dp-q", problem = { platform = "atcoder", contest = "dp", index = "Q", url = "https://atcoder.jp/contests/dp/tasks/dp_q" } }
r = { name = "dp-r", problem = { platform = "atcoder", contest = "dp", index = "R", url = "https://atcoder.jp/contests/dp/tasks/dp_r" } }
s = { name = "dp-s", problem = { platform = "atcoder", contest = "dp", index = "S", url = "https://atcoder.jp/contests/dp/tasks/dp_s" } }
t = { name = "dp-t", problem = { platform = "atcoder", contest = "dp", index = "T", url = "https://atcoder.jp/contests/dp/tasks/dp_t" } }
u = { name = "dp-u", problem = { platform = "atcoder", contest = "dp", index = "U", url = "https://atcoder.jp/contests/dp/tasks/dp_u" } }
v = { name = "dp-v", problem = { platform = "atcoder", contest = "dp", index = "V", url = "https://atcoder.jp/contests/dp/tasks/dp_v" } }
w = { name = "dp-w", problem = { platform = "atcoder", contest = "dp", index = "W", url = "https://atcoder.jp/contests/dp/tasks/dp_w" } }
x = { name = "dp-x", problem = { platform = "atcoder", contest = "dp", index = "X", url = "https://atcoder.jp/contests/dp/tasks/dp_x" } }
y = { name = "dp-y", problem = { platform = "atcoder", contest = "dp", index = "Y", url = "https://atcoder.jp/contests/dp/tasks/dp_y" } }
z = { name = "dp-z", problem = { platform = "atcoder", contest = "dp", index = "Z", url = "https://atcoder.jp/contests/dp/tasks/dp_z" } }

[[bin]]
name = "dp-a"
path = "src/bin/a.rs"

[[bin]]
name = "dp-b"
path = "src/bin/b.rs"

[[bin]]
name = "dp-c"
path = "src/bin/c.rs"

[[bin]]
name = "dp-d"
path = "src/bin/d.rs"

[[bin]]
name = "dp-e"
path = "src/bin/e.rs"

[[bin]]
name = "dp-f"
path = "src/bin/f.rs"

[[bin]]
name = "dp-g"
path = "src/bin/g.rs"

[[bin]]
name = "dp-h"
path = "src/bin/h.rs"

[[bin]]
name = "dp-i"
path = "src/bin/i.rs"

[[bin]]
name = "dp-j"
path = "src/bin/j.rs"

[[bin]]
name = "dp-k"
path = "src/bin/k.rs"

[[bin]]
name = "dp-l"
path = "src/bin/l.rs"

[[bin]]
name = "dp-m"
path = "src/bin/m.rs"

[[bin]]
name = "dp-n"
path = "src/bin/n.rs"

[[bin]]
name = "dp-o"
path = "src/bin/o.rs"

[[bin]]
name = "dp-p"
path = "src/bin/p.rs"

[[bin]]
name = "dp-q"
path = "src/bin/q.rs"

[[bin]]
name = "dp-r"
path = "src/bin/r.rs"

[[bin]]
name = "dp-s"
path = "src/bin/s.rs"

[[bin]]
name = "dp-t"
path = "src/bin/t.rs"

[[bin]]
name = "dp-u"
path = "src/bin/u.rs"

[[bin]]
name = "dp-v"
path = "src/bin/v.rs"

[[bin]]
name = "dp-w"
path = "src/bin/w.rs"

[[bin]]
name = "dp-x"
path = "src/bin/x.rs"

[[bin]]
name = "dp-y"
path = "src/bin/y.rs"

[[bin]]
name = "dp-z"
path = "src/bin/z.rs"
[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"
competitive-library = { path = "../competitive-library" }
