[package]
name = "tkppc4-1"
version = "0.1.0"
authors = ["uesugi6111 <59960488+aburaya6111@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete.bin]
tkppc4-1-a = { alias = "a", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_a" }
tkppc4-1-b = { alias = "b", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_b" }
tkppc4-1-c = { alias = "c", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_c" }
tkppc4-1-d = { alias = "d", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_d" }
tkppc4-1-e = { alias = "e", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_e" }
tkppc4-1-f = { alias = "f", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_f" }
tkppc4-1-g = { alias = "g", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_g" }
tkppc4-1-h = { alias = "h", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_h" }
tkppc4-1-i = { alias = "i", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_i" }
tkppc4-1-j = { alias = "j", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_j" }
tkppc4-1-k = { alias = "k", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_k" }
tkppc4-1-l = { alias = "l", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_l" }
tkppc4-1-m = { alias = "m", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_m" }
tkppc4-1-n = { alias = "n", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_n" }
tkppc4-1-o = { alias = "o", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_o" }
tkppc4-1-p = { alias = "p", problem = "https://atcoder.jp/contests/tkppc4-1/tasks/tkppc4_1_p" }

[[bin]]
name = "tkppc4-1-a"
path = "src/bin/a.rs"

[[bin]]
name = "tkppc4-1-b"
path = "src/bin/b.rs"

[[bin]]
name = "tkppc4-1-c"
path = "src/bin/c.rs"

[[bin]]
name = "tkppc4-1-d"
path = "src/bin/d.rs"

[[bin]]
name = "tkppc4-1-e"
path = "src/bin/e.rs"

[[bin]]
name = "tkppc4-1-f"
path = "src/bin/f.rs"

[[bin]]
name = "tkppc4-1-g"
path = "src/bin/g.rs"

[[bin]]
name = "tkppc4-1-h"
path = "src/bin/h.rs"

[[bin]]
name = "tkppc4-1-i"
path = "src/bin/i.rs"

[[bin]]
name = "tkppc4-1-j"
path = "src/bin/j.rs"

[[bin]]
name = "tkppc4-1-k"
path = "src/bin/k.rs"

[[bin]]
name = "tkppc4-1-l"
path = "src/bin/l.rs"

[[bin]]
name = "tkppc4-1-m"
path = "src/bin/m.rs"

[[bin]]
name = "tkppc4-1-n"
path = "src/bin/n.rs"

[[bin]]
name = "tkppc4-1-o"
path = "src/bin/o.rs"

[[bin]]
name = "tkppc4-1-p"
path = "src/bin/p.rs"
[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"
competitive-library = { path = "../competitive-library" }
